--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/png" href="images/logo-trans.png">
+    <link rel="icon" type="image/png" href="logo-trans.png">
     <link rel="stylesheet" href="index.css">
     <title> Portfolio </title>
 </head>
@@ -32,7 +32,7 @@
                 
 
         <div class="logo-container">
-            <img src="images/logo-trans.png" alt="">
+            <img src="logo-trans.png" alt="">
         </div>
 
         <div class="for-icons">
