--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <input type="email" placeholder="Email">
               <input type="text" placeholder="Subject">
               <input type="text" placeholder="Message">
-              <button> SEND </button>
+              <button type="submit"> SEND </button>
             </form>
           
           </div>
