--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
           <h3> Lets keep in Touch </h3>
           <div class="form-container">
             <form class="form">
-              <input type="text" placeholder="Name">
-              <input type="email" placeholder="Email">
-              <input type="text" placeholder="Subject">
-              <input type="text" placeholder="Message">
+              <input type="text" placeholder="Name" id="name-input">
+              <input type="email" placeholder="Email" id="email-input">
+              <input type="text" placeholder="Subject" id="sub-input">
+              <input type="text" placeholder="Message" id="message-input">
               <button type="submit"> SEND </button>
             </form>
           
