--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
           </div>
         </div>
      </section>
+    
+    <div class="div-for-footer">
+      <p> © COPYRIGHT 2019 ALL RIGHTS RESERVED. WEBSITE DESIGNED BY ABONGILE <a href="https://www.facebook.com/abongile.bono.35" target="_blank"><i class="fa fa-facebook"></i></a> </p>
+     </div>
 
 <!-- <script src="nav.js"> </script> -->
 </body>
