--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.806939930255!2d18.58183781505667!3d-33.997489833180474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc45083acf1b69%3A0xd4eace33495b969b!2s1571%20Matanzima%20Rd%2C%20Nyanga%2C%20Cape%20Town%2C%207750!5e0!3m2!1sen!2sza!4v1567772036926!5m2!1sen!2sza" width="1500" height="380" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.806939930255!2d18.58183781505667!3d-33.997489833180474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc45083acf1b69%3A0xd4eace33495b969b!2s1571%20Matanzima%20Rd%2C%20Nyanga%2C%20Cape%20Town%2C%207750!5e0!3m2!1sen!2sza!4v1567772036926!5m2!1sen!2sza" width="100%" height="380" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
      </section>
     
