--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
              <div class="text2-container">
                 <h2> My Work </h2>
                 <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem </p>
-                <a href="#" target="_blank"> Visit Website </a>
+                <a href="https://bonoabongile.github.io/MyDesign/" target="_blank"> Visit Website </a>
               </div>
             </div>  
               
