--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </div>
 
         <div class="for-icons">
-            <a href="tel:0815060915" target="_blank"><i class="fa fa-whatsapp"></i></a>
+            <a href="tel:0671272512" target="_blank"><i class="fa fa-whatsapp"></i></a>
             <a href="https://twitter.com/AbongileBono" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="https://www.facebook.com/abongile.bono.35" target="_blank"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-instagram" href="#" target="_blank"></i></a>
-            <a href="https://www.linkedin.com/in/abongile-bono-340410191/" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/_abongilebono/"><i class="fa fa-instagram" href="#" target="_blank"></i></a>
+            <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
       </section>
 
@@ -68,7 +68,7 @@
                   <h2> Follow </h2>
                  </div>
                   <div class="btn-container">
-                     <a href="https://twitter.com/AbongileBono" target="_blank"> Follow Me </a>
+                     <a href="https://www.instagram.com/_abongilebono/" target="_blank"> Follow Me </a>
                 </div>
               </div>
 
@@ -124,7 +124,7 @@
      </section>
     
     <div class="div-for-footer">
-      <p> © COPYRIGHT 2019 ALL RIGHTS RESERVED. WEBSITE DESIGNED BY ABONGILE <a href="https://www.facebook.com/abongile.bono.35" target="_blank"><i class="fa fa-facebook"></i></a> </p>
+      <p> © COPYRIGHT 2019 ALL RIGHTS RESERVED. WEBSITE DESIGNED BY ABONGILE <a href="https://www.instagram.com/_abongilebono/" target="_blank"><i class="fa fa-instagram"></i></a> </p>
      </div>
 
 <!-- <script src="nav.js"> </script> -->
