--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
             <div class="img2-container left2"> 
               <div class="text2-container">
                 <h2> My Work </h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem </p>
+                <p> A site I did for Out of Africa Childrens Foundation </p>
                 <a href="https://www.outofafricacf.org" target="_blank"> Visit Website </a>
               </div>
             </div>
             <div class="img2-container center2"> 
              <div class="text2-container">
                 <h2> My Work </h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem </p>
+                <p> Another Portfolio of mine showcasing my skills in Web Development </p>
                 <a href="https://bonoabongile.github.io/Master/" target="_blank"> Visit Website </a>
               </div>
             </div>
             <div class="img2-container right2"> 
              <div class="text2-container">
                 <h2> My Work </h2>
-                <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem </p>
+                <p> A class project I was once assigned to do </p>
                 <a href="https://bonoabongile.github.io/MyDesign/" target="_blank"> Visit Website </a>
               </div>
             </div>  
@@ -124,7 +124,7 @@
      </section>
     
     <div class="div-for-footer">
-      <p> © COPYRIGHT 2019 ALL RIGHTS RESERVED. WEBSITE DESIGNED BY ABONGILE <a href="https://www.instagram.com/_abongilebono/" target="_blank"><i class="fa fa-instagram"></i></a> </p>
+      <p> © COPYRIGHT 2021 ALL RIGHTS RESERVED. WEBSITE DESIGNED BY ABONGILE <a href="https://www.instagram.com/_abongilebono/" target="_blank"><i class="fa fa-instagram"></i></a> </p>
      </div>
 
 <!-- <script src="nav.js"> </script> -->
