--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </div>
 
         <div class="for-icons">
-            <a href="tel:0671272512" target="_blank"><i class="fa fa-whatsapp"></i></a>
+            <a href="tel:0671272512"><i class="fa fa-whatsapp"></i></a>
             <a href="https://twitter.com/AbongileBono" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="https://www.instagram.com/_abongilebono/"><i class="fa fa-instagram" href="#" target="_blank"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
         </div>
       </section>
 
