--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="tel:0671272512"><i class="fa fa-whatsapp"></i></a>
             <a href="https://twitter.com/AbongileBono" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.instagram.com/_abongilebono/"><i class="fa fa-instagram" target="_blank"></i></a>
+            <a href="https://www.instagram.com/_abongilebono/" target="_blank"><i class="fa fa-instagram"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
         </div>
       </section>
